# pluginlib_arrayutil_ci

./: .travis.yml  CMakeLists.txt  README.md  arrayutil_plugins.xml  package.xml
include/pluginlib_arrayutil_ci/: arrayutil_base.h  ave.h  max.h  min.h  sum.h
src/: arrayutil_base.cpp  ave.cpp  max.cpp  min.cpp  sum.cpp
test/: pluginlib_arrayutil.test  pluginlib_arrayutil_test.cpp
