<?xml version="1.0"?>
<package format="2">
  <name>pluginlib_arrayutil_ci</name>
  <version>0.0.0</version>
  <description>The pluginlib_arrayutil_ci package</description>

  <maintainer email="p595201m@mail.kyutech.jp">Masaru Morita</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>

  <test_depend>rostest</test_depend>

  <export>
    <pluginlib_arrayutil_ci plugin="${prefix}/arrayutil_plugins.xml" />
  </export>
</package>
